# K_Terminal_Audio

./: .gitignore  Cargo.toml
src/: app.rs  main.rs  ui.rs
src/audio/: fft.rs  mod.rs  player.rs
src/metadata/: tags.rs
