[package]
name = "kta"
version = "0.1.0"
edition = "2024"
description = "A terminal-based music player with real-time audio visualization"

[dependencies]
# Audio playback (rodio 0.22 - major API change from 0.20)
rodio = "0.22"

# FFT for audio visualization
rustfft = "6.2"

# FLAC metadata
metaflac = "0.2"

# MP3 tag reading
id3 = "1.0"

# TUI framework (Frame is non-generic since v0.24)
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }

# Terminal input handling
crossterm = "0.29"

# Async runtime (for potential future features)
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
directories = "6.0"
walkdir = "2.5"

image = { version="0.25", default-features=false, features=["jpeg", "png", "webp"] }
lofty = "0.24"
ratatui-image = "11.0"


[profile.release]
opt-level = 3 
lto = true
codegen-units = 1 
strip = true

